--- a/client/src/components/GameGridMeat/style.css
+++ b/client/src/components/GameGridMeat/style.css
@@ -43,7 +43,6 @@
     z-index: 10;
 } 
 
-
 #plankIcon{
     object-fit: cover;
     width: 100%;
@@ -63,6 +62,12 @@
 }
 
 #avaIcon{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+#treasureIcon{
     object-fit: cover;
     width: 100%;
     max-height: 100%;
