--- a/client/src/components/GameLost/style.css
+++ b/client/src/components/GameLost/style.css
@@ -46,3 +46,33 @@
     background-image: url(../../assets/walltop.png);
     z-index: 10;
 } 
+
+#plankIcon{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+#meatIcon{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+#monsIcon{
+        object-fit: cover;
+        width: 100%;
+        max-height: 100%;
+}
+
+#avaIcon{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
+
+#treasureIcon{
+    object-fit: cover;
+    width: 100%;
+    max-height: 100%;
+}
