--- a/client/src/components/PuzzleLogic/style.css
+++ b/client/src/components/PuzzleLogic/style.css
@@ -1,1 +1,11 @@
 
+.tools-style {
+
+}
+
+.renderpage-style {
+    padding: 20px;
+    background-image: url(../../assets/backgroundwall.png);
+    display: inline-block;
+    text-align: center;
+}
