--- a/client/src/components/DungeonGrids/style/style.css
+++ b/client/src/components/DungeonGrids/style/style.css
@@ -7,10 +7,11 @@
 
 .game-grid {
     display: inline-grid;
-
+    padding: 10px;
+    background-image: url(../../../assets/backgroundwall.png);
     grid-template-columns: 75px 75px 75px 75px 75px;
     grid-template-rows: 75px 75px 75px 75px 75px;
-    width: 95%;
+    /* width: 95%; */
     /* grid-gap: 2px; */
 }
 
