--- a/client/src/components/ToolsCarried/style.css
+++ b/client/src/components/ToolsCarried/style.css
@@ -2,9 +2,11 @@
 .tools-grid {
     float: left;
     display: grid;
-    grid-template-columns: 150px  150px;
-    grid-template-rows: 150px;
+    grid-template-columns: 75px  75px;
+    grid-template-rows: 75px;
     grid-gap: 2px;
+    padding: 10px;
+    background-image: url(../../assets/backgroundwall.png);
 }
 
 .square-tools {
