win and lose pages fixed

--- a/client/src/components/DungeonGrids/style/style.css
+++ b/client/src/components/DungeonGrids/style/style.css
@@ -88,3 +88,15 @@ img {
     height: auto;
 }
 
+.died {
+    background-color: red;
+    font-size: xx-large;
+    text-align: center;
+}
+
+.winner {
+    background-color: gold;
+    font-size: xx-large;
+    text-align: center;
+}
+
