rearranged tools grid

--- a/client/src/components/ToolsCarried/style.css
+++ b/client/src/components/ToolsCarried/style.css
@@ -1,9 +1,9 @@
 /* ToolsCarried */
-.tools-grid {
+.tools-carried-grid {
     float: left;
     display: grid;
-    grid-template-columns: 75px  75px;
-    grid-template-rows: 75px;
+    grid-template-columns: 75px;
+    grid-template-rows: 75px 75px;
     grid-gap: 2px;
     padding: 10px;
     background-image: url(../../assets/backgroundwall.png);
