--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -32,9 +32,10 @@
     
         display: inline-grid;
         padding: 10px;
-        grid-template-columns: 30% 70%;
+        grid-template-columns: 40% 60%;
         grid-template-rows: auto auto;
         margin: auto;
+        width: 100%;
         /* width: 95%; */
         /* grid-gap: 2px; */
     
