--- a/client/src/components/ToolsCarried/style.css
+++ b/client/src/components/ToolsCarried/style.css
@@ -23,11 +23,19 @@ width: 100%;
 max-height: 100%;
 }
 
+#plank:Hover{
+    opacity: 0.8;
+}
+
 #meat {
     z-index: 100;
     object-fit: cover;
     width: 100%;
     max-height: 100%;
+}
+
+#meat:Hover{
+    opacity: 0.8;
 }
 
 /* .photo > img {
