css and tinkering of functions

--- a/client/src/components/DungeonGrids/style/style.css
+++ b/client/src/components/DungeonGrids/style/style.css
@@ -11,6 +11,7 @@
     background-image: url(../../../assets/backgroundwall.png);
     grid-template-columns: 75px 75px 75px 75px 75px;
     grid-template-rows: 75px 75px 75px 75px 75px;
+    margin: 5px;
     /* width: 95%; */
     /* grid-gap: 2px; */
 }
