--- a/client/src/components/CreateMapOptions/style.css
+++ b/client/src/components/CreateMapOptions/style.css
@@ -1,8 +1,9 @@
 .features-grid {
-    display: grid;
+    display: inline-grid;
     grid-template-columns: 75px 75px 75px 75px 75px;
     grid-template-rows: 75px 75px;
     grid-gap: 2px;
+    margin: 5px;
 }
 
 .square {
