--- a/client/src/components/PuzzleLogic/style.css
+++ b/client/src/components/PuzzleLogic/style.css
@@ -12,16 +12,16 @@
 
 .nav-grid {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto;
     grid-template-rows: 30px;
     justify-content: space-evenly;
     margin:10px;
 }
 
 .homePagebtn {
-width: 150px;
-background-color: mediumblue;
-border-radius: 5px;
+    width: 150px;
+    background-color: mediumblue;
+    border-radius: 5px;
 }
 
 .startGamebtn {
@@ -32,7 +32,7 @@ border-radius: 5px;
     padding:0.2em;
 }
 
-.playgame_grid {
+.playgame-grid {
     display: grid;
     grid-template-columns: 80% 20%;
     grid-template-rows: auto;
@@ -40,4 +40,26 @@ border-radius: 5px;
     margin:10px;
     padding: 10px;
     align-self: center;
+}
+
+.dungeon-title {
+    width: 100%;
+    border-radius: 5px;
+    padding:0.2em 1em 0.2em 1em;
+    background-color: black;
+    color: white;
+}
+
+.dungeon-difficulty {
+    width: 100%;
+    border-radius: 5px;
+    padding: 0.2em 1em 0.2em 1em;
+    background-color: blueviolet;
+}
+
+.moves-taken {
+    background-color: chocolate;
+    height: auto;
+    width: 50%;
+    padding: 10px;
 }
