--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -9,6 +9,7 @@
     width: 80%;
     text-align: center;
     color: black;
+    align-content: center;
     
 }
 
@@ -38,6 +39,9 @@
         width: 100%;
         /* width: 95%; */
         /* grid-gap: 2px; */
+        justify-items: stretch;
+        align-items: center;
+        justify-content: stretch;
     
 }
 
@@ -50,10 +54,99 @@ text-align: center;
     margin: 5px;
 }
 
-.nav-grid {
+.create-nav-grid {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 33% 33% 33%;
     grid-template-rows: 30px;
-    justify-content: space-evenly;
+    justify-content: stretch;
     margin:10px;
+    justify-items: stretch;
+    align-items: center;
+}
+
+.title {
+    margin: 5px;
+}
+
+.persistent {
+    background-color: lime;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+    width: auto;
+    text-align: center;
+}
+
+.adventurer {
+    background-color:#FD0E35;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+    width: auto;
+    text-align: center;
+}
+
+.plunderer {
+    background-color: #0066FF;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+    width: auto;
+    text-align: center;
+}
+
+.ransacker {
+    background-color: gold;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+    width: auto;
+    text-align: center;
+}
+
+.dungeon-master {
+    background-color: #ee34d2;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+    width: auto;
+    text-align: center;
+}
+
+.nav-display {
+    background-color:black;
+    color: white;
+    border-radius: 25px;
+    padding: 5px 10px 5px 10px;
+    width: auto;
+    text-align: center;
+}
+
+.button-list-friends {
+    margin: 5px;
+}
+
+.button-list-dungeons {
+    margin: 5px;
+}
+
+.home-instructions {
+    
+    text-align: justify;
+    color: black;
+    margin: 2em;
+}
+
+.home-instructions2 {
+    
+    text-align: center;
+    color: black;
+    margin: 2em;
+}
+
+.change-dungeon {
+    background-color: darkorange;
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    width: 50%;
+    border-radius: 25px;
+    align-self: center;
+    cursor: pointer;
+    margin: 10px;
 }
