--- a/client/src/components/auth/style.css
+++ b/client/src/components/auth/style.css
@@ -1,3 +1,5 @@
+
+
 .container {
     text-align: center;
 }
@@ -12,4 +14,8 @@
     margin-left: auto;
     margin-right: auto;
     text-align: left;
+}
+
+.white-text {
+    color: white;
 }
