--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,6 +1,9 @@
 .footer {
-  background-color: darkorange;
-  border-top: 1px solid black;
+  /* background-color: purple; */
+  display:grid;
+  grid-template-columns:10% 80% 10%;
+  /* grid-template-rows: 75px 75px 75px 75px 75px; */
+  color: white;
   min-height: 30px;
   padding: 5px;
   position: fixed;
@@ -8,6 +11,7 @@
   bottom: 0;
   width: 100%;
   text-align: center;
+ 
   }
   
   .phantom {
@@ -15,4 +19,13 @@
   padding: 5px;
   height:30px;
   width: 100%;
+  }
+
+  .music-button {
+    float: left;
+    align-self: flex-end;
+  }
+
+  .footer-credits-link {
+    color: white
   }
