--- a/client/src/components/DungeonGrids/style/style.css
+++ b/client/src/components/DungeonGrids/style/style.css
@@ -12,6 +12,8 @@
     grid-template-columns: 75px 75px 75px 75px 75px;
     grid-template-rows: 75px 75px 75px 75px 75px;
     margin: 5px;
+    row-gap: 1px;
+    column-gap: 1px;
 }
 
 .square {
@@ -19,6 +21,9 @@
     align-items: center;
     text-align: center;
     vertical-align: middle;
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
 .pitWallLeft {
@@ -49,13 +54,16 @@
 
 .wallTop {
     background-image: url(../../../assets/walltop.png);
-    z-index: 10;
+    /* z-index: 10; */
 } 
 
 #plankIcon{
     object-fit: cover;
     width: 100%;
     max-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #meatIcon{
@@ -74,6 +82,10 @@
     object-fit: cover;
     width: 100%;
     max-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
 }
 
 #treasureIcon{
