--- a/client/src/components/DungeonGrids/style/style.css
+++ b/client/src/components/DungeonGrids/style/style.css
@@ -76,6 +76,10 @@
         object-fit: cover;
         width: 100%;
         max-height: 100%;
+        z-index: 100;
+        position: absolute;
+        top: 0;
+        left: 0;
 }
 
 #avaIcon{
@@ -103,11 +107,14 @@ img {
     background-color: red;
     font-size: xx-large;
     text-align: center;
+    border-radius: 50px;
 }
 
 .winner {
     background-color: gold;
     font-size: xx-large;
     text-align: center;
+    border-radius: 50px;
+
 }
 
