--- a/client/src/components/PuzzleLogic/style.css
+++ b/client/src/components/PuzzleLogic/style.css
@@ -24,7 +24,7 @@
 
 .playgame-grid {
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 20% 60% 20%;
     grid-template-rows: auto;
     justify-content: space-evenly;
     margin:10px;
@@ -49,7 +49,8 @@
 
 .moves-taken {
     background-color: chocolate;
-    height: auto;
+    height: 100px;
     width: 50%;
     padding: 10px;
+    border-radius: 20px;
 }
