--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -164,3 +164,19 @@ h1 {
 .muli-font {
 font-family: 'Muli', sans-serif;
 }
+
+.demo-grid {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: auto;
+
+}
+
+.use-tool-demo {
+    align-self: middle;
+    margin-top: 100px;
+    border: solid;
+    border-width: 10px;
+    border-color: black;
+}
+
