--- a/client/src/components/PuzzleLogic/style.css
+++ b/client/src/components/PuzzleLogic/style.css
@@ -32,6 +32,16 @@
     align-self: center;
 }
 
+.playgame-grid720 {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto auto auto;
+    justify-content: space-evenly;
+    margin:10px;
+    padding: 10px;
+    align-self: center;
+}
+
 .dungeon-title {
     width: 100%;
     border-radius: 5px;
